
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_CREAT ;
 int O_RDWR ;
 int close (int ) ;
 int fd ;
 int gotroot ;
 int open (char*,int,int) ;
 int perror (char*) ;

void do_thread2(void) {
 while(!gotroot) {
  if ((fd = open("/tmp/.padlina", O_RDWR | O_CREAT, 0600)) < 0)
   perror("open");

  close(fd);
 }

 return;
}
