; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_9488.c_do_thread2.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd/local/extr_9488.c_do_thread2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gotroot = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"/tmp/.padlina\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@fd = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"open\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_thread2() #0 {
  br label %1

1:                                                ; preds = %13, %0
  %2 = load i32, i32* @gotroot, align 4
  %3 = icmp ne i32 %2, 0
  %4 = xor i1 %3, true
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i32, i32* @O_RDWR, align 4
  %7 = load i32, i32* @O_CREAT, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @open(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %8, i32 384)
  store i32 %9, i32* @fd, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %5
  %12 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %5
  %14 = load i32, i32* @fd, align 4
  %15 = call i32 @close(i32 %14)
  br label %1

16:                                               ; preds = %1
  ret void
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
